Windows QPA: Fix MinGW developer build

Fix warning:
qwindowswindow.cpp: In member function 'void QWindowsWindow::setWindowState_sys(Qt::WindowStates)':
qwindowswindow.cpp:1965:74: error: suggest parentheses around arithmetic in operand of '^' [-Werror=parentheses]
             if ((newState & Qt::WindowMinimized) && (oldState ^ newState & Qt::WindowMaximized))

This is actually a real bug. What was meant was to check if the Maximized flag
was changed.  This code path is for the case in which the windows becomes
minimized, and the maximized state changed.

Amends change a02959bb5b43a3f9d881e5213ceedf535202b6a1.

Task-number: QTBUG-57882
Change-Id: I1cd32a7080240e4462d3cd4f129c6c1a08409996
Reviewed-by: Robin Burchell <robin.burchell@crimson.no>